# Prueba06

./: Cargo.toml  LICENSE  README.md  Rocket.toml
extras/: Cargo.toml  qrcode.rs
media/: playlist.m3u
src/: .main.rs.swp  mMapGen.rs  main.rs  mapgen.rs  newmain  track.rs
src/mapgen/: .track.rs.swp  track.rs
static/: index.html  index.html.tera  nav.html.tera  play.html  player.html.tera  radio.html.tera  settings.html.tera
static/css/: gradient.css  style.css
static/img/: credits.txt
static/js/: front.js  fullscreen.js  paul.js  player.js
