[package]
name = "rustadio"
version = "0.0.0"
edition = "2018"
publish = false

[dependencies]
rocket = "0.4.2"
rocket_codegen = "0.4.2"
rocket_http = "0.4.2"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

rodio = "0.9.0"
id3 = "0.3.0"
id3-image = "0.1.1"
m3u = "1.0.0"

[dependencies.rocket_contrib]
rocket_contrib = "0.4.2"
default_features = false
features = ["tera_templates", "serve"]








