[package]
name = "rustadio"
version = "0.0.0"
edition = "2018"
publish = false

[dependencies]
rocket = "0.4.2"
rocket_codegen = "0.4.2"
rocket_http = "0.4.2"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

rodio = "0.9.0"
id3 = "0.3.0"
id3-image = "0.1.1"
m3u = "1.0.0"
image = "0.21.0"
mp3-duration = "0.1.6"
qr2term = "0.1.3"
gstreamer = "0.14.3"
glib = "0.8.1"
gstreamer-player = "0.14.0"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["handlebars_templates", "tera_templates", "serve", "json"]






